# wazuh-ar-ipset

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-bake.hcl
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  docker.yml
src/: commands.c  commands.h  globals.h  ipset.c  ipset.h  json.c  json.h  main.c  protocol.c  protocol.h  utils.c  utils.h  wazuh.c  wazuh.h
